--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>FontLink</title>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
