--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <h2 id="usage">Usage tips and tricks</h2>
 
     <ul>
-      <li><p>You can use drag-and-drop to add fonts. To change its position in the list, drag it with <kbd>Shift</kbd> pressed.</p></li>
-      <li><p>To rename a set, click twice on it.</p></li>
+      <li><p>To rename a set, click twice on it. To change its position in the list, drag it with <kbd>Shift</kbd> pressed.</p></li>
+      <li><p>You can use drag-and-drop to add fonts.</p></li>
       <li><p>Double click on font will open it in associated application (probably, font viewer).</p></li>
       <li><p>The same font can be added to multiple sets. In this case, disabling such font in certain set does not unlink it if it still enabled in other sets.</p></li>
       <li><p>Fonts added to FontLink will be linked only while it’s running.</p></li>
