--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <p>FontLink is developed <a href="https://github.com/danpla/fontlink">on GitHub</a>. There you can also find <a href="https://github.com/danpla/fontlink/issues">the bug tracker</a>.</p>
 
     <footer>
-      Copyright © 2015 Daniel Plachotich
+      Copyright © 2015, 2016 Daniel Plachotich
     </footer>
   </body>
 </html>
