--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
 
     <p>FontLink is a small GTK+ utility to install fonts temporarily on Unix-like systems.</p>
-    <p>It allows you to quickly install certain fonts only when you really need them without copying files or creating symlinks by hand.</p>
+    <p>It allows you to quickly install fonts only when you really need them without copying files or creating symlinks by hand.</p>
     <p>FontLink has a very simple interface with which you can group fonts into sets (for example, one set per project) and quickly enable or disable certain fonts as well as entire sets in a single click.</p>
     <p>As you might guess from the name, it uses mechanism of symbolic links for fast “fake” installation without actual copying and deleting font files.</p>
 
@@ -36,7 +36,7 @@
     <ul>
       <li><p>To rename a set, click twice on it. To change its position in the list, drag it with <kbd>Shift</kbd> pressed.</p></li>
       <li><p>You can use drag-and-drop to add fonts.</p></li>
-      <li><p>Double click on font will open it in associated application (probably, font viewer).</p></li>
+      <li><p>Double click on a font will open it in an associated application (probably, a font viewer).</p></li>
       <li><p>The same font can be added to multiple sets. In this case, disabling such font in certain set does not unlink it if it still enabled in other sets.</p></li>
       <li><p>Fonts added to FontLink will be linked only while it’s running.</p></li>
       <li><p>It may be useful to add FontLink to autostart. In this case, add <code>--minimized</code> or <code>-m</code> argument to start FontLink minimized to the notification area.</p></li>
