--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
 
     <p>FontLink is a small GTK+ utility to install fonts temporarily on Unix-like systems.</p>
-    <p>It allows you to quickly install fonts only when you really need them without copying files or creating symlinks by hand.</p>
+    <p>It allows you to quickly install fonts only when you really need them, without copying files or creating symlinks by hand.</p>
     <p>FontLink has a very simple interface with which you can group fonts into sets (for example, one set per project) and quickly enable or disable certain fonts as well as entire sets in a single click.</p>
     <p>As you might guess from the name, it uses mechanism of symbolic links for fast “fake” installation without actual copying and deleting font files.</p>
 
