--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
 
     <h2 id="downloads">Downloads</h2>
 
-    <p>The most recent version of FontLink is 0.9.3.</p>
+    <p>The most recent version of FontLink is <a href="https://github.com/danpla/fontlink/releases/tag/v1.0.0">1.0.0</a>.</p>
 
     <ul id="dllist">
       <li>
-        <p><a href="https://github.com/danpla/fontlink/releases/download/v0.9.3/fontlink_0.9.3-1_all.deb">fontlink_0.9.3-1_all.deb</a> — Debian/Ubuntu package</p>
+        <p><a href="https://github.com/danpla/fontlink/releases/download/v1.0.0/fontlink_1.0.0-1_all.deb">fontlink_1.0.0-1_all.deb</a> — Debian/Ubuntu package</p>
       </li>
       <li>
-        <p><a href="https://github.com/danpla/fontlink/archive/v0.9.3.tar.gz">fontlink-0.9.3.tar.gz</a> — source code</p>
+        <p><a href="https://github.com/danpla/fontlink/archive/v1.0.0.tar.gz">fontlink-1.0.0.tar.gz</a> — source code</p>
       </li>
     </ul>
 
-    <p>Using package is recommended way to install FontLink. On non-DEB systems, you can use <code>alien</code> to install the .deb package.</p>
+    <p>Using a package is the recommended way to install FontLink. On non-DEB systems, you can use <code>alien</code> to install the DEB package.</p>
     <p>Another way is to install from the sources using <code>make</code>. Read <code>INSTALL.md</code> for detailed instructions.
     <p>Also, you can just execute <code>bin/fontlink</code> to use FontLink without installation or to try it before installing.</p>
 
     <h2 id="development">Development</h2>
 
-    <p>FontLink is developed <a href="https://github.com/danpla/fontlink">on GitHub</a>. There you can also find <a href="https://github.com/danpla/fontlink/issues">the bug tracker</a>.</p>
+    <p>FontLink is developed <a href="https://github.com/danpla/fontlink">on GitHub</a>. There you can also find <a href="https://github.com/danpla/fontlink/issues">the issue tracker</a>.</p>
 
     <footer>
-      Copyright © 2015, 2016 Daniel Plachotich
+      Copyright © 2015, 2016 <a href="mailto:daniel.plachotich@yandex.ru?subject=FontLink">Daniel Plachotich</a>
     </footer>
   </body>
 </html>
