Fix screenshot title.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p>As you might guess from the name, it uses mechanism of symbolic links for fast “fake” installation without actual copying and deleting font files.</p>
 
     <div class="screenshot">
-      <img src="img/screenshot.png" title="FontLink sreenshot" alt="FontLink screenshot">
+      <img src="img/screenshot.png" title="FontLink screenshot" alt="FontLink screenshot">
     </div>
 
     <h2 id="usage">Usage tips and tricks</h2>
