Update the title of the link to the "Usage" section.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav>
       <p>
-        <a href="#usage">Usage tips and tricks</a>
+        <a href="#usage">Usage</a>
         •
         <a href="#downloads">Downloads</a>
         •
