Fix "access for" => "access to".

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <h2 id="usage">Usage</h2>
 
-    <p>FontLink has a simple interface that mainly consists of two lists. The left one contains font sets; the right one shows fonts of the selected set. Each has a context menu and a toolbar for quick access for most frequently used actions.</p>
+    <p>FontLink has a simple interface that mainly consists of two lists. The left one contains font sets; the right one shows fonts of the selected set. Each has a context menu and a toolbar for quick access to the most frequently used actions.</p>
     <p>You can create new sets or just use the default one. To quickly rename a set, click twice on it. To change its position in the list, drag it with the <kbd>Shift</kbd> key pressed.</p>
     <p>In addition to using the context menu or the toolbar button, you can add fonts by dropping them from your file manager anywhere on the FontLink's window.</p>
     <p>The same font can be in multiple sets. In this case, disabling or removing such a font from one set does not unlink it if it is still enabled in others.</p>
