--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       </li>
     </ul>
 
-    <p>Using a package is the recommended way to install FontLink. You can use <code>alien</code> to install the DEB package on non-DEB systems.</p>
-    <p>Another way is to install from the sources using <code>make</code>. Read <code>INSTALL.md</code> for detailed instructions.
-    <p>Also, you can just execute <code>bin/fontlink</code> to use FontLink without installation or to try it before installing.</p>
+    <p>Using a package is the recommended way to install FontLink. You can use <code><a href="https://en.wikipedia.org/wiki/Alien_(software)">alien</a></code> to install the DEB package on non-DEB systems.</p>
+    <p>Another way is to install from the sources using <code>make</code>. Read <code><a href="https://github.com/danpla/fontlink/blob/master/INSTALL.md">INSTALL.md</a></code> for detailed instructions.</p>
+    <p>Also, you can just execute <code>bin/fontlink</code> to use FontLink without installation. Still, you should ensure you have all <a href="https://github.com/danpla/fontlink/blob/master/INSTALL.md#dependencies">the dependencies</a> installed.</p>
 
     <h2 id="development">Development</h2>
 
