--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <p>FontLink is developed <a href="https://github.com/danpla/fontlink">on GitHub</a>. There you can also find <a href="https://github.com/danpla/fontlink/issues">the issue tracker</a>.</p>
 
     <footer>
-      Copyright © 2015, 2016 <a href="mailto:daniel.plakhotich@gmail.com?subject=FontLink">Daniel Plakhotich</a>
+      Copyright © 2015-2018 <a href="mailto:daniel.plakhotich@gmail.com?subject=FontLink">Daniel Plakhotich</a>
     </footer>
   </body>
 </html>
