--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <h2 id="usage">Usage</h2>
 
-    <p>The FontLink's interface consists of two lists. The left one contains font sets; the right one shows fonts of the selected set.</p>
+    <p>The FontLink's interface consists of two lists. The left list contains font sets; the right one shows fonts of the selected set.</p>
     <p>To add fonts to a set, use the button below the font list, the context menu, or drop them from your file manager anywhere on the FontLink's window. You can add the same font in several sets. Disabling or removing such a font from one set will not unlink it if it's still enabled in others.</p>
     <p>If a font that is already installed somewhere on your system, it will appear as “inactive” and its checkbox will always be enabled. Check its pop-up tooltip to see where it is installed.</p>
     <p>It's recommended to set up your fonts <em>before</em> running a program that will use them, because not all programs can update the list of fonts at runtime.</p>
@@ -38,14 +38,14 @@
 
     <h2 id="downloads">Downloads</h2>
 
-    <p>The most recent version of FontLink is <a href="https://github.com/danpla/fontlink/releases/tag/v1.0.1">1.0.1</a>.</p>
+    <p>The most recent version of FontLink is <a href="https://github.com/danpla/fontlink/releases/tag/v1.0.2">1.0.2</a>.</p>
 
     <ul id="dllist">
       <li>
-        <p><a href="https://github.com/danpla/fontlink/releases/download/v1.0.1/fontlink_1.0.1-1_all.deb">fontlink_1.0.1-1_all.deb</a> — Debian/Ubuntu package</p>
+        <p><a href="https://github.com/danpla/fontlink/releases/download/v1.0.2/fontlink_1.0.2-1_all.deb">Debian/Ubuntu package (.deb)</a></p>
       </li>
       <li>
-        <p><a href="https://github.com/danpla/fontlink/archive/v1.0.1.tar.gz">fontlink-1.0.1.tar.gz</a> — source code</p>
+        <p><a href="https://github.com/danpla/fontlink/archive/v1.0.2.tar.gz">Source code (.tar.gz)</a></p>
       </li>
     </ul>
 
