html: Add lang, author, and description

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
     <title>FontLink</title>
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
+    <meta name="author" content="Daniel Plakhotich">
+    <meta name="description" content="Program to install fonts temporarily on Unix-like systems">
   </head>
   <body>
     <header>
