index: Point changelog link to release version rather than the master

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <h2 id="downloads">Downloads</h2>
 
-    <p>The most recent version of FontLink is 1.0.3 (<a href="https://raw.githubusercontent.com/danpla/fontlink/master/CHANGELOG.md">changelog</a>).</p>
+    <p>The most recent version of FontLink is 1.0.3 (<a href="https://raw.githubusercontent.com/danpla/fontlink/v1.0.3/CHANGELOG.md">changelog</a>).</p>
 
     <ul id="dllist">
       <li>
